objects/X7S_Ideas_Field_Set__mdt/X7S_Ideas_Field_Set__mdt.object-meta.xml
<CustomObject>
    <description>Define a set of fields for the Idea object</description>
    <label>7S Ideas Field Set</label>
    <pluralLabel>7S Ideas Field Sets</pluralLabel>
</CustomObject>