objects/X7S_Ideas_Field_Set__mdt/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <inlineHelpText>Idea custom field definition</inlineHelpText>
    <label>Field 1</label>
    <referenceTo>X7S_Ideas_Custom_Field__mdt</referenceTo>
    <relationshipLabel>Idea Field Sets 1</relationshipLabel>
    <relationshipName>Idea_Field_Sets_1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>