objects/X7S_Ideas_Field_Set__mdt/fields/Field_Sequence_10__c.field-meta.xml
<CustomField>
    <fullName>Field_Sequence_10__c</fullName>
    <inlineHelpText>Field display sequence</inlineHelpText>
    <label>Field Sequence 10</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>