objects/X7S_Ideas_Field_Set__mdt/fields/Field_Sequence_3__c.field-meta.xml
<CustomField>
    <fullName>Field_Sequence_3__c</fullName>
    <inlineHelpText>Custom field layout sequence</inlineHelpText>
    <label>Field Sequence 3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>